# dungeon-of-chess

./: .gitignore  CMakeLists.txt  LICENSE  build-run.bat  build.bat  readme.md
src/: chess.cpp  chess.h  ia.cpp  ia.h  includes.h  main.cpp  shader.cpp  shader.h  tessellator.cpp  tessellator.h  util.cpp  util.h
sublime_text_build/: cpp_sdl2_gl.sublime-build
